# solder-proof

./: .gitmodules  CMakeLists.txt  main.cpp
res/shaders/: color.fragment.glsl  diffuse.fragment.glsl  fragment.glsl  hdr.fragment.glsl  main.lua  quad.fragment.glsl  quad.vertex.glsl  vertex.glsl
src/Engine/: Application.cpp  Application.hpp  Component.hpp  Model.cpp  Model.hpp  ResourceManager.hpp  S&P.hpp
src/Engine/Systems/: Material.cpp  Material.hpp  Renderer.cpp  Renderer.hpp
src/Game/: EditorScene.cpp  EditorScene.hpp  LoadingScene.cpp  LoadingScene.hpp  MainScene.cpp  MainScene.hpp
src/Util/: DataRep.hpp  Function.hpp  Profiler.cpp  Profiler.hpp
